# mugs

./: CMakeLists.txt  README.md
calibration/: calibration.py
cmake/: FindLibGp.cmake
configuration/: calibration.py  configuration.py  fetchData.py
doc/: Doxyfile  mainpage.dox
examples/: CMakeLists.txt  train_model.cpp  util.h
examples/data/: move_test.txt  move_testGaze.txt  move_train.txt  move_trainGaze.txt
include/mug/: eye_model.h  eye_model_gp.h  eye_model_gp_optimization.h  eye_model_linear.h  eye_model_moore.h  gaze_tracker.h  head_eye_transform.h  lsl_interface.h  preprocessing.h  sample.h  screen_model.h  screen_model_flat.h  target.h
programs/MUGSEvaluator/: CMakeLists.txt  mugs_evaluator.cpp  mugs_evaluator.h  train_model.cpp  util.h
programs/MUGSFilter/: CMakeLists.txt  mugs_filter.cpp
programs/MUGSRecorder/: CMakeLists.txt  convertXDFtomugs.py  mugs_recorder.cpp  xdf.py
src/: eye_model_gp.cpp  eye_model_gp_optimization.cpp  eye_model_linear.cpp  eye_model_moore.cpp  lsl_interface.cpp  preprocessing.cpp  screen_model_flat.cpp
tests/: CMakeLists.txt  all_tests.cpp  preprocessing_test.cpp  sample_test.cpp
